templates/mcrouter_template.yaml
---
# Source: mcrouter/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: mcrouter-release-name
  labels:
    app: mcrouter
    chart: mcrouter-0.0.3
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: mcrouter
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
---
# Source: mcrouter/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:  
  name: mcrouter-release-name
  labels:
    app: mcrouter
    chart: mcrouter-0.0.3
    release: release-name
    heritage: Helm
spec:
  selector:    
    matchLabels:
      app: mcrouter
      release: release-name
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:        
        app: mcrouter
        release: release-name
        routed_via: release-name
      annotations:        
        checksum/secrets: 765cf13b531baf06f0d6dbd615bd53fffeb9456b7cc2f0c01eca1a9c0e9d7bc1
    spec:
      containers:        
        # TODO: understand how to make mcrouter use the
        # application CA when connecting to memcached via TLS
        - name: mcrouter-release-name-mcrouter
          image: docker-registry.wikimedia.org/latest
          imagePullPolicy: IfNotPresent
          ports:
          # Please note: this port is not exposed outside of the pod.
            - name: mcrouter
              containerPort: 4442
          livenessProbe:
            tcpSocket:
              port: mcrouter
          readinessProbe:
            exec:
              command:
                - /bin/healthz
          volumeMounts:
            - name: mcrouter-release-name-mcrouter
              mountPath: /etc/mcrouter
          resources:
            requests:
              cpu: 250m
              memory: 200M
            limits:
              cpu: 250m
              memory: 200M
      volumes:        
        # Mcrouter configuration
        - name: mcrouter-release-name-mcrouter
          configMap:
            name: mcrouter-release-name-mcrouter-config
